--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 <body>
     <header class="header">
         <div class="wrapper">
-        <h1 class="header-logo"><a href="#">Bistro Q</a></h1>
+        <h1 class="header-logo"><a href="https://okaryu94.github.io/bistroq/">Bistro Q</a></h1>
         <button type="button" id="header-btn" class="header-btn" title="メニュー開閉"><span></span></button>
         
         <nav class="header-gnav">
             <ul class="header-gnav-list">
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="#">MENU</a></li>
-                <li><a href="#">RESERVE</a></li>
+                <li><a href="https://okaryu94.github.io/bistroq-page/">RESERVE</a></li>
                 <li><a href="#">STAFF</a></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
