--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
     <header class="header">
         <div class="wrapper">
-        <h1 class="header-logo"><a href="https://okaryu94.github.io/bistroq/">Bistro Q</a></h1>
+        <h1 class="header-logo"><a href="https://okaryu94.github.io/bistroq">Bistro Q</a></h1>
         <button type="button" id="header-btn" class="header-btn" title="メニュー開閉"><span></span></button>
         
         <nav class="header-gnav">
