--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                       <li>スープ・ド・ポワソン</li>
                       <li>新タケノコとフォアグラ 山椒風味</li>
                       <li>ホワイトアスパラと白子 チーズソース</li>
-                      <li>フランス・シャロレー牛ステーキ</li>
+                      <li>鶏もも肉のコンフィ</li>
                       <li>本日のデザート</li>
                       </ul>
                     </div>
