--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                   </div>
 
                   <div class="floor-img">
-                    <img src="hamburg1.jpg">
+                    <img src=">
                   </div>
               </div>
               <h3>アクセス</h3>
